--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
+    <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"> -->
+    </script>
   </head>
   <body>
     <section class="root hide-root" id="index"></section>
