--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap"> -->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </script>
   </head>
   <body>
